# vcpkg_issue35108

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
qml/: app.qml
src/: main.cpp
